--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -1,73 +1,46 @@
-@import 'register.css';
-@import 'login.css';
-@import 'user.css';
-@import 'timeline.css';
-@import 'tweet.css';
-/*
 
-* { padding: 0; margin: 0; }
 
-body {
- font-family: Arial, Helvetica, sans-serif;
- font-size: 13px;
+ .row-fluid {
+      background-color: white;
+  .border-radius(3px);
+
+      margin-top: 0;
+      margin-left: 0;
+      padding: 0;
+  }
+
+.hd2 {
+    margin-bottom: 40px;
 }
 
-#wrapper { 
- margin: 0 auto;
- width: 922px;
+.left-column, .right-column {
+    padding: 0;
 }
-#faux {
- background: url(faux-2-3-col.gif);
- margin-bottom: 0px;
- overflow: auto; !* Paul O Brien Fix for IE www.pmob.co.uk *!
- width: 100%
+
+p {
+    /* color: @web-color-grey-2;*/
+    font-size: 16px;
+    line-height: 22px;
+    margin-top: 20px;
 }
-#header {
- color: #333;
- width: 902px;
- padding: 10px;
- height: 100px;
- margin: 10px 0px 0px 0px;
- background: #D1DBDB;
+
+
+label {
+    display: block;
+    /*  color: @web-color-grey-1;*/
+    font-size: 16px;
+    width: 40%;
+    float:left;
+    line-height: 36px;
 }
-#navigation {
- color: #333;
- padding: 10px;
- margin: 0px 0px 0px 0px;
- background: #ABBEBE;
+
+input, select, textarea {
+    display: block;
+    float:left;
+    text-align: left;
+    /*  color: @web-color-grey-2;*/
+    font-size: 14px;
+    padding: 0 10px;
+    width: 60%;
 }
-#leftcolumn { 
- display: inline;
- color: #333;
- margin: 10px;
- padding: 0px;
- width: 195px;
- float: left;
-}
-#content { 
- float: left;
- color: #333;
- margin: 10px 13px;
- padding: 0px;
- width: 460px;
- display: inline;
- position: relative;
-}
-#rightcolumn { 
- display: inline;
- position: relative;
- color: #333;
- margin: 10px 10px 10px 0px;
- padding: 0px;
- width: 195px;
- float: right;
-}
-#footer { 
- width: 902px;
- clear: both;
- color: #333;
- background: #ABBEBE;
- margin: 0px 0px 10px 0px;
- padding: 10px;
-}
-.clear { clear: both; background: none; }*/
+
